<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SQL Basics\n"
            android:textSize="28dp"
            android:textColor="#086A87"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chapter0_content1"
            android:textSize="20dp"
            android:layout_marginBottom="4dp"
            />
        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chapter0_content2"
            android:textSize="20dp"
            android:layout_marginTop="4dp"
            />
        <ImageView
            android:layout_width="234dp"
            android:layout_height="234dp"
            android:src="@drawable/table3"/>
        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chapter0_content3"
        android:textSize="20dp"
        />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example13"
            android:layout_marginBottom="5dp"/>

        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chapter0_content4"
            android:textSize="20dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example14"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chapter0_content5"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example15"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chapter0_content6"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example16"
            android:layout_marginBottom="5dp"/>

        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/chapter0_content7"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example17"
            android:layout_marginBottom="5dp"/>

        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/chapter0_content8"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example18"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="or"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example19"
            android:layout_marginBottom="5dp"/>

        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/chapter0_content9"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example20"
            android:layout_marginBottom="5dp"/>

        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/chapter0_content10"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example21"
            android:layout_marginBottom="5dp"/>

        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/chapter0_content11"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example22"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chapter0_content12"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example23"
            android:layout_marginBottom="5dp"/>

        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/chapter0_content13"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example24"
            android:layout_marginBottom="5dp"/>

        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/chapter0_content14"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/table4"
            android:layout_marginBottom="5dp"/>

        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/chapter0_content15"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example25"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="#0B2F3A"
            android:text="Result :"
            android:textSize="20dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/solution12"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>
</ScrollView>