<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chapter3_title"
            android:textSize="28dp"
            android:textColor="#086A87"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chapter3_content1"
            android:textSize="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/structure"/>
        <TextView
            android:layout_width="match_parent"
            android:textColor="#0B2F3A"
            android:layout_height="wrap_content"
            android:text="Example : "
            android:textSize="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/structure1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example10"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="#0B2F3A"
            android:text="Result : "
            android:textSize="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/solution11"/>
        <View android:layout_height="10dp"
            android:layout_width="match_parent"></View>

        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chapter3_content2"
            android:textSize="20dp"/>
        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chapter3_content3"
            android:textSize="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/table1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Example : "
            android:textColor="#0B2F3A"
            android:textSize="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example11"/>
        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chapter3_content4"
            android:textSize="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/table2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Example : "
            android:textColor="#0B2F3A"
            android:textSize="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/example12"/>
        <View android:layout_height="4dp"
            android:layout_width="match_parent"
            android:background="@color/border"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\nBonus :"
            android:textColor="#0B2F3A"
            android:textStyle="italic"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#0B2F3A"
            android:text="@string/chapter3_content5"
            android:textSize="20dp"/>

    </LinearLayout>
</ScrollView>